--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<a href ="sin.html"><button>Sing In</button></a></br>
-	<a href = "sup.html"><button>Sing Up</button></a></br>
+	<a href ="sin.html"><button>Sing_In</button></a></br>
+	<a href = "sup.html"><button>Sing_Up</button></a></br>
 </body>
 </html>
